# tf-aws-eks-ecr-demo

./: Dockerfile.app  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
k8s/: flask-demo-app-deployment.yml
terraform/: .terraform.lock.hcl  1-vpc.tf  10-iam-oidc-ecr-pull.tf  11-ecr.tf  2-internet-gw.tf  3-subnets.tf  4-nat-gw.tf  5-routes.tf  6-eks.tf  7-nodes.tf  8-iam-oidc.tf  9-iam-oidc-test.tf  data.tf  locals.tf  provider.tf  vars.tf
