[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Paul <github@paulfranze.de>"]
readme = "README.md"
packages = [{include = "flask-app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
